fixed the padding of the thing

--- a/src/app/mainroot/roompage/roompage.component.html
+++ b/src/app/mainroot/roompage/roompage.component.html
@@ -54,7 +54,7 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row negmargin">
       <div *ngIf="!fullbuyoutroomactive" class="col-auto roommain">
         {{ roomname }} |
       </div>
