--- a/src/app/mainroot/roompage/roompage.component.scss
+++ b/src/app/mainroot/roompage/roompage.component.scss
@@ -16,8 +16,8 @@ $color-gray: rgb(236,236,236);
 }
 
 .SecHeadunderline {
-  font-size: 1.5rem;
-  padding: 0.5rem 0;
+  font-size: 2rem;
+  //padding: 0.5rem 0;
   text-decoration: underline;
   cursor: pointer;
 }
