--- a/src/app/mainroot/venuepage/venuepage.component.scss
+++ b/src/app/mainroot/venuepage/venuepage.component.scss
@@ -143,7 +143,7 @@ $color-primary: rgb(83,139,197);
   }
 }
 
-#rfpsendselect{
+.rfpsendselect{
   background-color: rgb(68,147,192);
   border-color: rgb(68,147,192);
   color: white;
