--- a/src/app/mainroot/browsevenues/browsevenuesroot/browsevenuesroot.component.html
+++ b/src/app/mainroot/browsevenues/browsevenuesroot/browsevenuesroot.component.html
@@ -14,6 +14,7 @@
     </div>
   </div>
 
+
   <div *ngIf="showsmallfilter" class="container">
     <div class=" row d-flex justify-content-between m-3 firstline">
       <div class="select-down col-lg-4 col-md-4 col-sm-6 py-2">
@@ -71,11 +72,12 @@
           <div *ngIf="capacityfilterbuttonshow" class="col-12">
             <button class="acfbutton btn" (click)="applyfilters()">Apply Capacity Filter</button>
           </div>
-
         </div>
       </form>
+
     </div>
   </div>
+
 
   <div *ngIf="showsmallfilter" class="container">
     <div class="row">
@@ -156,7 +158,6 @@
       <a class="rightbuttons" (click)="clearfilters()" style="cursor: pointer; color: red;">Clear All</a>
     </div>
   </div>
-</div>
 <div *ngIf="!nosearch" class="container">
   <form (ngSubmit)="searchvenue()" #searchform="ngForm">
     <div class="row">
@@ -179,7 +180,7 @@
 <div id="list-venue">
   <div class="container">
     <div id="venue-search" class="row d-flex justify-content-between mb-5">
-      <!--<a href="#" class="btn col-3 px-0 py-5">Map view</a>
+      <a href="#" class="btn col-3 px-0 py-5">Map view</a>
       <div class="col-3 px-0 py-5">
         <div class="container-fluid">
           <div class="row justify-content-end">
