pushing fixed contact us page

--- a/src/app/mainroot/contactus/contactus.component.html
+++ b/src/app/mainroot/contactus/contactus.component.html
@@ -1,15 +1,15 @@
 <div class="container-fluid">
   <div class="row">
 
-    <div class="col-12 pannel top">
-      <div class="text-center content">
+    <div class="col-12 top">
+      <div class="text-center topshim">
         <h1>Don't Be Shy</h1>
         <h3>Questions? Comments? We'd love to hear from you.</h3>
       </div>
     </div>
 
-    <div class="col-12 pannel">
-      <div class="text-center middlecontent content">
+    <div class="col-12 middle">
+      <div class="text-center align-middle">
         <h2>Need Help?</h2>
         <br>
         <br>
@@ -24,11 +24,11 @@
       </div>
     </div>
 
-    <div class="col-12 bottompannel pannel">
-      <div class="text-center bottomcontent content">
+    <div class="col-12 bottom">
+      <div class="text-center topshim">
         <h2>Have a venue to list?</h2>
         <br>
-        <button class="btn btn-outline-primary applybutton"  data-toggle="modal" data-target="#Venue-SignUp"><h4>Apply</h4></button>
+        <button class="btn btn-outline-primary button"  data-toggle="modal" data-target="#Venue-SignUp"><h4>Apply</h4></button>
       </div>
     </div>
 
