--- a/src/app/mainroot/roompage/roompage.component.html
+++ b/src/app/mainroot/roompage/roompage.component.html
@@ -92,7 +92,7 @@
     </div>
   </div>
 
-    <div class="row Section negmargin">
+    <div class="row negmargin">
       <div *ngIf="!fullbuyoutroomactive && room.seatedcapacity != null" class="col-auto roommain"> {{ room.seatedcapacity }} Seated |
       </div>
       <div *ngIf="!fullbuyoutroomactive && room.seatedcapacity == null" class="col-auto roommain"> N/A Seated |
